# Adrenaline

./: .gitignore  CMakeLists.txt  CNAME  Dockerfile  EBOOT.PBP  Makefile  adrenaline_compat.h  adrenaline_version.h  adrenaline_vita.h  index.html  kermit.h  psp-updatelist.txt  readme.md  todo.md
cef/: CMakeLists.txt  Makefile  README.md
cef/binary/: CMakeLists.txt  main.c
cef/bits/: README.md  iso_common.c  iso_common.h  ttystdio.c
cef/btcnf/: CMakeLists.txt
cef/btcnf/pspbtcnf_inferno/: Makefile  pspbtcnf.txt
cef/btcnf/pspbtcnf_march33/: pspbtcnf.txt
cef/btcnf/pspbtcnf_normal/: pspbtcnf.txt
cef/btcnf/pspbtcnf_np9660/: pspbtcnf.txt
cef/btcnf/pspbtcnf_recovery/: pspbtcnf.txt
cef/cmake/: cef-prx.cmake  psp-cfw-sdk.cmake
cef/core/binary/: Makefile  README.md  main.c  start.S
cef/core/btcnf/: CMakeLists.txt  README.md
cef/core/kermit_idstorage/: CMakeLists.txt  Makefile  README.md
cef/core/payloadex/: README.md  main.c
cef/core/payloadex_ark/: CMakeLists.txt  README.md
cef/core/payloadex_old/: Makefile  README.md  main.c
cef/core/pentazemin/: CMakeLists.txt  Makefile  README.md  exports.exp
cef/core/popcorn/: CMakeLists.txt  Makefile  exports.exp
cef/core/rebootex/: README.md  main.c
cef/core/rebootex_old/: CMakeLists.txt  Makefile  README.md  libc.h  main.c
cef/core/recovery/: CMakeLists.txt  Makefile  imports.S
cef/core/systemctrl/: CMakeLists.txt  Makefile  README.md  exports.exp  nid_map.txt
cef/core/vshctrl/: CMakeLists.txt  Makefile  README.md  exports.exp  imports.S
cef/core/xmbctrl/: CMakeLists.txt  Makefile  README.md  exports.exp
cef/extra/satelite/: CMakeLists.txt  Makefile  README.md
cef/extra/satelite_classic/: CMakeLists.txt  README.md
cef/extra/updater/: CMakeLists.txt  Makefile  README.md  gen_updatelist.py
cef/extra/xmbctrl/: CMakeLists.txt  Makefile
cef/galaxy/: CMakeLists.txt  Makefile  README.md  exports.exp  galaxy.h  main.c
cef/include/: adrenaline_log.h  common.h  infernoctrl.h  iso_common.h  isoctrl.h  kubridge.h  libpsardumper.h  macros.h  pspctrl.h  psperror.h  pspinit.h  pspintrman.h  pspkerneltypes.h  psploadcore.h  psploadexec.h  psploadexec_kernel.h  pspmodulemgr.h  psppower.h  pspsysmem.h  pspvshbridge.h  rebootexconfig.h  sysclib_user.h  systemctrl.h  systemctrl_se.h  vita_pops.h  vshctrl.h
cef/include_/: common.h  extratypes.h  kubridge.h  pspcrypt.h  pspctrl.h  pspinit.h  psploadexec.h  pspusbcam.h  pspvshbridge.h  sysclib_user.h  systemctrl.h  systemctrl_se.h  vshctrl.h
cef/inferno/: CMakeLists.txt  Makefile  README.md  exports.exp  inferno.h  iodrv_funcs.c  isocache.c  isoread.c  libs.h  main.c  sctrlrand.c  umd.c  utils.c  utils.h
cef/iso_drivers/galaxy/: CMakeLists.txt  Makefile  exports.exp
cef/iso_drivers/inferno/: CMakeLists.txt  Makefile  README.md  exports.exp
cef/iso_drivers/march33/: CMakeLists.txt  Makefile  exports.exp
cef/kermit_idstorage/: CMakeLists.txt  Makefile  main.c
cef/lib/: CMakeLists.txt  build.mak  build_bin.mak  build_prx.mak
cef/lib/system_stubs/: Makefile  (+2 more)
cef/march33/: CMakeLists.txt  Makefile  README.md  csoread.c  exports.exp  isoread.c  main.c  mediaman.c  mediaman.h  umd9660.c  umd9660.h  umdman.c
cef/minimal_edition/: CMakeLists.txt  Makefile  csoread.c  exports.exp  exports639.exp  exports660.exp  isof_patch_list.h  isoread.c  main.c  sceumd.c  sceumdman.c  umd9660_driver.h  umd9660_march_driver.c
cef/newrecovery/: Makefile  README.md  installer.c  main.c  menu.c  menu.h  options.h  plugins.c  plugins.h  plugins_old.c  utils.c  vgraph.c
cef/payloadex/: CMakeLists.txt  Makefile  libc.c  main.c
cef/payloadex_ark/: Makefile  main.c
cef/payloadex_old/: CMakeLists.txt  main.c
cef/pentazemin/: CMakeLists.txt  Makefile  README.md  adrenaline.c  adrenaline.h  binary.h  exports.exp  imports.S  main.c  power_patch.c  utility_patch.c  vitamem.c
cef/popcorn/: CMakeLists.txt  Makefile  README.md  exports.exp  libcrypt.c  main.c  main.h  popcorn.h  syspatches.c
cef/rebootex/: CMakeLists.txt  Makefile  main.c
cef/rebootex_old/: CMakeLists.txt  Makefile  main.c
cef/recovery/: CMakeLists.txt  Makefile  crt0.c  imports.S  installer.c  libc.c  main.c  main.h  menu.c  options.h  plugins.c  plugins.h  plugins_old.c  utils.c  vgraph.c
cef/satelite/: CMakeLists.txt  Makefile  main.c  menu.c  satelite.h
cef/systemctrl/: CMakeLists.txt  LflashFatfmt.c  Makefile  README.md  adrenaline.c  adrenaline.h  conf.c  executable_patch.c  executable_patch.h  exports.c  exports.exp  externs.h  game_patch.c  gameinfo.c  gameinfo.h  hide_patch.c  imports.S  init_patch.c  io_patch.c  kubridge.c  libraries_patch.c  libraries_patch.h  main.c  main.h  malloc.c  modpatches.c  modulepatches.h  nid_table.h  nodrm.c  nodrm.h  pgd.c  pgd.h  plugin.c  plugin.h  power_patch.c  power_patch.h  storage_cache.c  storage_cache.h  sysclibforuser.c  sysmodpatches.c  (+8 more)
cef/systemctrl_orig/: Makefile  adrenaline.c  conf.c  gameinfo.h  hide_patch.c  init_patch.c  malloc.c  pgd.c  plugin.c  storage_cache.c  storage_cache.h  sysclibforuser.c  systemctrl.c  ttystdio.c  utils.h
cef/updater/: CMakeLists.txt  Makefile  gen_updatelist.py  main.c  version.c
cef/vshctrl/: CMakeLists.txt  Makefile  README.md  dirent_track.c  dirent_track.h  disctype.c  exports.exp  externs.h  imports.S  isoreader.c  isoreader.h  main.c  main.old.c  patch_io.c  patch_io.h  patch_vsh.c  patched_io.c  patched_io.h  printk.c  printk.h  registry.h  utils.c  utils.h  virtual_mp4.c  virtual_mp4.h  virtual_pbp.c  virtual_pbp.h  virtualpbpmgr.c  virtualpbpmgr.h  virtualsfo.c  virtualsfo.h  vshctrl.c
cef/xmbctrl/: CMakeLists.txt  Makefile  README.md  config.c  imports.S  list.c  list.h  main.c  main.h  options.h  patch_vsh.c  plugins.c  plugins.h  settings.c  settings.h  utils.c  utils.h  xmbctrl.h
user/: CMakeLists.txt  files.h  flashfs.c  flashfs.h  main.c  main.h  math_utils.c  menu.c  menu.h  msfs.c  msfs.h  pops.c  states.c  states.h  titleinfo.c  usb.c  utils.c  utils.h
user/includes/: scale2x_plus_f.h  scale2x_plus_v.h  scale3x_f.h  scale3x_v.h  vflux_f.h  vflux_v.h
user/lodepng/: lodepng.c  lodepng.h
(+282 files in other folders)
