cmake_minimum_required(VERSION 3.28)

project(cef VERSION 1.0 LANGUAGES C ASM)

include("cmake/cef-prx.cmake")
include("cmake/psp-cfw-sdk.cmake")

option(NIGHTLY OFF "Enable nightly build")
set(DEBUG "" CACHE STRING "Debug level (1-4)")
option(USE_OLD_BOOTLOADEX OFF "Use old bootloadex/rebootex")
option(USE_PSP_PACKER OFF "Use psp-packer to compress prx's")

set(FLASH0_DIR ${PROJECT_SOURCE_DIR}/../user/flash0)

remove_definitions("-D_PSP_FW_VERSION=600")
add_definitions("-D_PSP_FW_VERSION=660")
include_directories(${CMAKE_CURRENT_LIST_DIR}/include)

if(NIGHTLY)
  message(STATUS "Enabling NIGHTLY build")
  add_compile_definitions(-DNIGHTLY=1)
endif()
if(DEBUG)
  message(STATUS "Enabling DEBUG ${DEBUG} build")
  add_compile_definitions(-DDEBUG=${DEBUG})
endif()

add_subdirectory(binary)
add_subdirectory(btcnf)
add_subdirectory(lib)
if(USE_OLD_BOOTLOADEX)
  message(STATUS "Building old payloadex/rebootex")
  add_subdirectory(payloadex_old)
  add_subdirectory(rebootex_old)
else()
  add_subdirectory(payloadex)
  add_subdirectory(rebootex)
endif()
add_subdirectory(payloadex_ark)
add_subdirectory(galaxy)
add_subdirectory(inferno)
add_subdirectory(kermit_idstorage)
add_subdirectory(march33)
add_subdirectory(pentazemin)
add_subdirectory(popcorn)
add_subdirectory(recovery)
add_subdirectory(satelite)
add_subdirectory(systemctrl)
add_subdirectory(updater)
add_subdirectory(vshctrl)
add_subdirectory(xmbctrl)
