cmake_minimum_required(VERSION 3.28)


if(NOT DEFINED ENV{PSPDEV})
message(FATAL_ERROR "Please define PSPDEV to point to your PSPDEV path!")
endif()

set(CMAKE_TOOLCHAIN_FILE "$ENV{PSPDEV}/psp/share/pspdev.cmake" CACHE PATH "toolchain file")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

project(cef VERSION 1.0 LANGUAGES C ASM)

include("cmake/cef-prx.cmake")
include("cmake/psp-cfw-sdk.cmake")

option(NIGHTLY OFF "Enable nightly build")
set(DEBUG "" CACHE STRING "Debug level (1-4)")
option(USE_OLD_BOOTLOADEX OFF "Use old bootloadex/rebootex")
option(USE_PSP_PACKER OFF "Use psp-packer to compress prx's")

set(FLASH0_DIR ${PROJECT_SOURCE_DIR}/../user/flash0)

remove_definitions("-D_PSP_FW_VERSION=600")
add_definitions("-D_PSP_FW_VERSION=660")
include_directories(${CMAKE_CURRENT_LIST_DIR}/include)

if(NIGHTLY)
  message(STATUS "Enabling NIGHTLY build")
  add_compile_definitions(-DNIGHTLY=1)
endif()
if(DEBUG)
  message(STATUS "Enabling DEBUG ${DEBUG} build")
  add_compile_definitions(-DDEBUG=${DEBUG})
endif()

add_subdirectory(core/binary)
add_subdirectory(core/btcnf)
add_subdirectory(lib)
if(USE_OLD_BOOTLOADEX)
  message(STATUS "Building old payloadex/rebootex")
  add_subdirectory(core/payloadex_old)
  add_subdirectory(core/rebootex_old)
else()
  add_subdirectory(core/payloadex)
  add_subdirectory(core/rebootex)
endif()
add_subdirectory(core/payloadex_ark)
add_subdirectory(iso_drivers/galaxy)
add_subdirectory(iso_drivers/inferno)
add_subdirectory(iso_drivers/march33)
add_subdirectory(iso_drivers/minimal_edition)
add_subdirectory(core/kermit_idstorage)
add_subdirectory(core/pentazemin)
add_subdirectory(core/popcorn)
add_subdirectory(core/recovery)
add_subdirectory(core/systemctrl)
add_subdirectory(core/vshctrl)
add_subdirectory(core/xmbctrl)
add_subdirectory(extra/satelite)
add_subdirectory(extra/updater)
